# HFE_Backend_Staging

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  blog.db  config_local.py  docker-compose.yml  pyproject.toml  redploy.sh  requirements.txt
scripts/: clean_local_db.sh  create_local_queue.sh  create_test_queue.sh  prepare_local_db.sh  prepare_test_db.sh
src/api/: api.py  schemas.py
src/authentication/: JWTtoken.py  auth_middleware.py  encryption.py  oauth2.py
src/common/: admins.py  celery_worker.py  chat.py  client.py  constants.py  dto.py  email_service.py  enums.py  labels.py  logger.py  otp_service.py  provider.py  signup_document.py  tasks.py  translate.py  user.py  utils.py  welcome_email.html
src/configs/: config.py  database.py
src/models/: models.py  users.py
src/routers/: admin.py  casemanager.py  chat.py  client.py  payment.py  provider.py  user.py
src/templates/: activated.html  chatranscript.html  contactus.html  paymentLink.html  titaniumCreated.html  trialWelcome.html
src/tests/: test_health.py
